# pr-title-printers

./: .gitignore  CHANGELOG.md  README.md  SECURITY.md
.github/actions/setup-python/: action.yml
.github/actions/setup-ruby/: action.yml
.github/workflows/: minitest.yml  pypi--ci.yml  pypi--daily-dependencies-update.yml  pypi--release.yml  python.yml  ruby--ci.yml  ruby.yml  rubygem--ci.yml  rubygem--daily-dependencies-update.yml  unittest.yml
PyPI/: README.md  pyproject.toml
PyPI/src/spreen_pr/: __init__.py
RubyGem/: README.md  Rakefile  spreen-pr.gemspec
RubyGem/lib/spreen_pr/: version.rb
RubyGem/test/: application_test.rb
pypi/src/spreen_pr/: __init__.py  application.py
pypi/test/: conftest.py  test_cli.py
python/: README.md  main.py  tasks.py
python/src/: application.py
python/src/spreen_pr/: cli.py
python/test/: conftest.py  test_application.py
ruby/: .rubocop.yml  .rubocop_todo.yml  README.md  Rakefile  Steepfile  main.rb
ruby/exe/: pr-title
ruby/lib/: spreen_pr.rb
ruby/src/: application.rb
ruby/test/: application_test.rb
rubygem/: README.md  Steepfile
rubygem/lib/: spreen-pr.rb
rubygem/lib/spreen_pr/: application.rb  cli.rb  version.rb
rubygem/test/: cli_test.rb
